[gd_scene load_steps=7 format=3 uid="uid://d1ys4uxa5wfwf"]

[ext_resource type="Script" uid="uid://dbbaifw2q82w1" path="res://scenes/drawer.gd" id="1_71w65"]
[ext_resource type="Texture2D" uid="uid://cgvwrjndd18v1" path="res://assets/character_roundRed.png" id="1_qe6j5"]
[ext_resource type="Texture2D" uid="uid://dvdccdi1qfdkh" path="res://assets/item_pencil.png" id="3_kj86r"]
[ext_resource type="Texture2D" uid="uid://dj6rxkv7acvlf" path="res://assets/effect_shotLarge.png" id="4_lt7lr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_71w65"]
radius = 16.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cxo8o"]
radius = 16.0
height = 80.0

[node name="Drawer" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_71w65")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_71w65")

[node name="DrawerSprite" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("1_qe6j5")

[node name="PencilSprite" type="Sprite2D" parent="."]
position = Vector2(16, -4.7683716e-07)
rotation = 1.5707964
texture = ExtResource("3_kj86r")

[node name="LinePlacementSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.49803922)
z_index = -1
position = Vector2(60, 0)
rotation = 1.5707964
texture = ExtResource("4_lt7lr")

[node name="DrawEraseArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawEraseArea"]
position = Vector2(24, 0)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_cxo8o")
debug_color = Color(0.6, 0.6, 0.6, 0.41960785)

[connection signal="body_entered" from="DrawEraseArea" to="." method="_on_draw_erase_area_body_entered"]
[connection signal="body_exited" from="DrawEraseArea" to="." method="_on_draw_erase_area_body_exited"]
